add admin dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,14 @@
   <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
   <link href="assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-  <!-- Customized Bootstrap Stylesheet -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <!-- admin template -->
+  <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+  <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
-  <!-- Template Stylesheet -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css-admin/styles.css" rel="stylesheet">
+
+  <link href="assets/css-elearn/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css-elearn/style.css" rel="stylesheet">
 
 </head>
 
@@ -46,6 +49,10 @@
 
   <!-- Template Javascript -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Admin Template -->
+  <script src="assets/js/scripts.js"></script>
+
 </body>
 
 </html>
